--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -1,269 +1,270 @@
 .InfoBlock_info__2a42M {
-    height: 180px
+	height: 180px
 }
 
 @media (max-width: 768px) {
-    .InfoBlock_info__2a42M {
-        height: 100%
-    }
+	.InfoBlock_info__2a42M {
+		height: 100%
+	}
 }
 
 .InfoBlock_info__item__LaugH {
-    height: 85% !important
+	height: 85% !important
 }
 
 @media (max-width: 768px) {
-    .InfoBlock_info__item__LaugH section {
-        height: 97px !important;
-        width: 300px
-    }
+	.InfoBlock_info__item__LaugH section {
+		height: 97px !important;
+		width: 300px
+	}
 }
 
 .InfoBlock_info__item__LaugH:not(:last-child) {
-    border-right: 1px solid #d9d9d9
+	border-right: 1px solid #d9d9d9
 }
 
 @media (max-width: 768px) {
-    .InfoBlock_info__item__LaugH:not(:last-child) {
-        border-right: none
-    }
+	.InfoBlock_info__item__LaugH:not(:last-child) {
+		border-right: none
+	}
 }
 
 .Shop_info__z571o {
-    height: 180px
+	height: 180px
 }
 
 @media (max-width: 768px) {
-    .Shop_info__z571o {
-        height: 100%
-    }
+	.Shop_info__z571o {
+		height: 100%
+	}
 
-    .Shop_info__item__g9Tuq section {
-        height: 97px !important
-    }
+	.Shop_info__item__g9Tuq section {
+		height: 97px !important
+	}
 }
 
 .Shop_filterTitle__3AbWn {
-    display: flex;
-    justify-content: space-between
+	display: flex;
+	justify-content: space-between
 }
 
 .Shop_filterTitle__3AbWn span {
-    font-weight: 700;
-    color: var(--primary);
-    cursor: pointer;
-    display: none
+	font-weight: 700;
+	color: var(--primary);
+	cursor: pointer;
+	display: none
 }
 
 @media (max-width: 768px) {
-    .Shop_filterTitle__3AbWn span {
-        display: block
-    }
+	.Shop_filterTitle__3AbWn span {
+		display: block
+	}
 
-    .Shop_filterColumn__3Yibo {
-        display: none;
-        position: absolute;
-        z-index: 11;
-        background: #fff;
-        border-radius: 8px;
-        box-shadow: 0 0 40px -14px;
-        padding: 20px;
-        width: 90%;
-        left: 50%;
-        transform: translateX(-50%);
-        max-width: 500px
-    }
+	.Shop_filterColumn__3Yibo {
+		display: none;
+		position: absolute;
+		z-index: 11;
+		background: #fff;
+		border-radius: 8px;
+		box-shadow: 0 0 40px -14px;
+		padding: 20px;
+		width: 90%;
+		left: 50%;
+		transform: translateX(-50%);
+		max-width: 500px
+	}
 
-    .Shop_filterColumn__3Yibo.Shop_showFilter__1Am4r {
-        display: block
-    }
+	.Shop_filterColumn__3Yibo.Shop_showFilter__1Am4r {
+		display: block
+	}
 }
 
 @media (max-width: 992px) {
-    .Shop_reviewImg__2D71G {
-        display: none
-    }
+	.Shop_reviewImg__2D71G {
+		display: none
+	}
 
-    .Shop_reviewMargin__2DOjQ {
-        margin-bottom: 5px
-    }
+	.Shop_reviewMargin__2DOjQ {
+		margin-bottom: 5px
+	}
 
-    .Shop_reviewMarginImg__1M4N5 {
-        margin-bottom: 10px
-    }
+	.Shop_reviewMarginImg__1M4N5 {
+		margin-bottom: 10px
+	}
 
-    .Shop_dMdNone__1dA_j {
-        display: none !important
-    }
+	.Shop_dMdNone__1dA_j {
+		display: none !important
+	}
 
-    .Shop_detailCategory__3T4Td {
-        margin-top: 20px
-    }
+	.Shop_detailCategory__3T4Td {
+		margin-top: 20px
+	}
 
-    .Shop_detailRating__2Y8Fk {
-        margin: 2px 0 9px
-    }
+	.Shop_detailRating__2Y8Fk {
+		margin: 2px 0 9px
+	}
 }
 
 @media (max-width: 576px) {
-    .Shop_product__1cFbR .Shop_product__actions__1VOlb {
-        opacity: 1 !important;
-        position: absolute;
-        height: 100%;
-        top: 0;
-        left: 50%;
-        max-width: 245px;
-        width: 100%;
-        margin: 0 auto;
-        transform: translateX(35%)
-    }
+	.Shop_product__1cFbR .Shop_product__actions__1VOlb {
+		opacity: 1 !important;
+		position: absolute;
+		height: 100%;
+		top: 0;
+		left: 50%;
+		max-width: 245px;
+		width: 100%;
+		margin: 0 auto;
+		transform: translateX(35%)
+	}
 }
 
 .Shop_product__1cFbR:hover h6:first-child {
-    color: #bd744c
+	color: #bd744c
 }
 
 .Shop_product__1cFbR:hover .Shop_product__actions__1VOlb {
-    opacity: 1 !important
+	opacity: 1 !important
 }
 
 .Shop_product__1cFbR h6:first-child {
-    color: #232323
+	color: #232323
 }
 
 .Shop_product__actions__1VOlb {
-    transition: all .65s ease;
-    opacity: 0 !important
+	transition: all .65s ease;
+	opacity: 0 !important
 }
 
 .Shop_product__actions__heart__sBlRs {
-    background: url(/media/heart.ac561d27a1d5be34eaace8aae4678ff4.svg);
-    width: 24px;
-    height: 24px
+	background: url(/images/media/heart.ac561d27a1d5be34eaace8aae4678ff4.svg);
+	width: 24px;
+	height: 24px
 }
 
 .Shop_product__actions__heart__sBlRs:hover {
-    background: url(/media/heart-hover.8cf19dd881becde584dadbca80473416.svg)
+	background: url(/images/media/heart-hover.8cf19dd881becde584dadbca80473416.svg)
 }
 
 .Shop_product__actions__max__gkHwK {
-    background: url(/media/maximize.e604fdc90fd1c396622719a9f88e43ed.svg);
-    width: 24px;
-    height: 24px
+	background: url(/images/media/maximize.e604fdc90fd1c396622719a9f88e43ed.svg);
+	width: 24px;
+	height: 24px
 }
 
 .Shop_product__actions__max__gkHwK:hover {
-    background: url(/media/maximize-hover.693bd2b51eb350ec8ed92f60148926f3.svg)
+	background: url(/images/media/maximize-hover.693bd2b51eb350ec8ed92f60148926f3.svg)
 }
 
 .Shop_product__actions__cart__2rrU7 {
-    background: url(/media/shopping-cart.9b2895b1b3e95109ddf7069f81e23c40.svg);
-    width: 24px;
-    height: 24px
+	background: url(/images/media/shopping-cart.9b2895b1b3e95109ddf7069f81e23c40.svg);
+	width: 24px;
+	height: 24px
 }
 
 .Shop_product__actions__cart__2rrU7:hover {
-    background: url(/media/shopping-cart-hover.6bd7d951c6e87d837abd5917b2bd601f.svg)
+	background: url(/images/media/shopping-cart-hover.6bd7d951c6e87d837abd5917b2bd601f.svg)
 }
 
 @media (max-width: 576px) {
-    .Shop_productInfo__2QXeb {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        max-width: 245px;
-        margin: 0 auto;
-        justify-content: flex-start
-    }
+	.Shop_productInfo__2QXeb {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		max-width: 245px;
+		margin: 0 auto;
+		justify-content: flex-start
+	}
 }
 
 .Shop_productImage__1ILty {
-    transition: all .65s ease;
-    max-width: 100%;
-    width: 100%;
-    height: 264px;
-    max-height: 264px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: 50%
+	transition: all .65s ease;
+	max-width: 100%;
+	width: 100%;
+	height: 264px;
+	max-height: 264px;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: 50%
 }
 
 .Shop_productImage__1ILty:hover {
-    transform: scale(1.03) translate(0)
+	transform: scale(1.03) translate(0)
 }
 
 .Shop_quantityBtn__1rv9x:focus, .Shop_quantityBtn__1rv9x:hover {
-    color: #bd744c !important
+	color: #bd744c !important
 }
 
 .Shop_modalWidndow__khQIW {
-    display: flex
+	display: flex
 }
 
 .Shop_modalWidndow__khQIW div.Shop_content__6OGCn, .Shop_modalWidndow__khQIW div.Shop_image__1cGIq {
-    width: 50%
+	width: 50%
 }
 
 @media (max-width: 900px) {
-    .Shop_modalWidndow__khQIW div.Shop_content__6OGCn button, .Shop_modalWidndow__khQIW div.Shop_image__1cGIq button {
-        padding: 10px
-    }
+	.Shop_modalWidndow__khQIW div.Shop_content__6OGCn button, .Shop_modalWidndow__khQIW div.Shop_image__1cGIq button {
+		padding: 10px
+	}
 
-    .Shop_modalWidndow__khQIW div.Shop_content__6OGCn, .Shop_modalWidndow__khQIW div.Shop_image__1cGIq {
-        width: auto
-    }
+	.Shop_modalWidndow__khQIW div.Shop_content__6OGCn, .Shop_modalWidndow__khQIW div.Shop_image__1cGIq {
+		width: auto
+	}
 
-    .Shop_modalWidndow__khQIW > div > img {
-        max-width: 500px
-    }
+	.Shop_modalWidndow__khQIW > div > img {
+		max-width: 500px
+	}
 
-    .Shop_modalWidndow__khQIW {
-        flex-direction: column;
-        align-items: center
-    }
+	.Shop_modalWidndow__khQIW {
+		flex-direction: column;
+		align-items: center
+	}
 }
 
 .Shop_filterColumn__3Yibo .filter-item {
-    margin-top: -1px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	margin-top: -1px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .Shop_filterColumn__3Yibo .filter-title {
-    margin-left: 5px
+	margin-left: 5px
 }
 
-.Shop_filterColumn__3Yibo label.filter-label {
-    display: flex;
-    align-items: center
+.Shop_filterColumn__3Yibo .filter-label {
+	display: flex;
+	align-items: center
 }
 
-.Shop_filterColumn__3Yibo label.filter-label p {
-    display: inline-block;
-    margin-bottom: 0;
-    margin-left: .25rem;
+.Shop_filterColumn__3Yibo .filter-label p {
+	display: inline-block;
+	margin-bottom: 0;
+	margin-left: .25rem;
+	font-weight: 500;
 }
 
 
 .Cart_cartTotal__2jJho {
-    background-color: #f5f5f5;
-    padding: 32px;
-    height: 500px;
-    display: flex;
-    flex-direction: column
+	background-color: #f5f5f5;
+	padding: 32px;
+	height: 500px;
+	display: flex;
+	flex-direction: column
 }
 
 .Cart_cartTotal__2jJho .Cart_checkOutBtn__3oMJx {
-    margin: 0 -32px -32px
+	margin: 0 -32px -32px
 }
 
 @media (max-width: 992px) {
-    .Cart_cartTotal__2jJho {
-        height: 400px
-    }
+	.Cart_cartTotal__2jJho {
+		height: 400px
+	}
 }
 
 .Cart_quantityBtn__2dpnu:focus, .Cart_quantityBtn__2dpnu:hover {
-    color: #bd744c !important
+	color: #bd744c !important
 }
