I don't know what i changed

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,7 +1,7 @@
 
 :root {
-    --suf-red: rgb(153, 0, 0);
-    --suf-red-l1: rgb(173, 10, 10)
+    --cf-prmiary: rgb(153, 0, 0);
+    --cf-primary: rgb(173, 10, 10)
 }
 
 
