Admin User module (Create and Read) done.

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,92 +1,135 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
 :root {
-    --cf-prmiary: rgb(153, 0, 0);
-    --cf-primary: rgb(173, 10, 10)
+	--cf-prmiary: rgb(153, 0, 0);
+	--cf-primary: rgb(173, 10, 10)
 }
 
 body {
-    font-family: 'Varela Round', cursive!important;
+	font-family: 'Varela Round', cursive !important;
 }
 
 
 img {
-    object-fit: cover !important;
+	object-fit: cover !important;
 }
 
 .fs-9 {
-    font-size: 9px!important
+	font-size: 9px !important
 }
+
 .fs-10 {
-    font-size: 10px !important
+	font-size: 10px !important
 }
+
 .fs-11 {
-    font-size: 11px !important
+	font-size: 11px !important
 }
+
 .fs-12 {
-    font-size: 12px !important
+	font-size: 12px !important
 }
+
 .fs-13 {
-    font-size: 13px !important
+	font-size: 13px !important
 }
+
 .fs-14 {
-    font-size: 14px !important
+	font-size: 14px !important
 }
+
 .fs-15 {
-    font-size: 15px !important
+	font-size: 15px !important
 }
+
 .fs-16 {
-    font-size: 16px !important
+	font-size: 16px !important
 }
+
 .fs-17 {
-    font-size: 17px !important
+	font-size: 17px !important
 }
+
 .fs-18 {
-    font-size: 18px !important
+	font-size: 18px !important
 }
+
 .fs-20 {
-    font-size: 20px !important
+	font-size: 20px !important
 }
+
 .fs-22 {
-    font-size: 22px !important
+	font-size: 22px !important
 }
+
 .fs-24 {
-    font-size: 24px !important
+	font-size: 24px !important
 }
+
 .fs-32 {
-    font-size: 32px !important
+	font-size: 32px !important
 }
+
 .fs-48 {
-    font-size: 48px !important
+	font-size: 48px !important
 }
+
 .fw-medium {
-    font-weight: 500
+	font-weight: 500
 }
+
 .fw-semibold {
-    font-weight: 600
+	font-weight: 600
 }
 
 .text-red {
-    color: #900 !important;
+	color: #900 !important;
 }
+
 .text-blue {
-    color: rgb(173, 216, 230) !important;
+	color: rgb(173, 216, 230) !important;
 }
 
 
 .toastify {
-    font-weight: bolder;
+	font-weight: bolder;
 }
+
 .toastify.success {
-    background: linear-gradient(30deg, rgb(10, 170, 30), rgba(10, 170, 100, .8), #73a5ff);
+	background: linear-gradient(30deg, rgb(10, 170, 30), rgba(10, 170, 100, .8), #73a5ff);
 }
+
 .toastify.info {
-    background: linear-gradient(30deg, rgb(37, 157, 138), rgba(37, 157, 138, .8), #73a5ff);
+	background: linear-gradient(30deg, rgb(37, 157, 138), rgba(37, 157, 138, .8), #73a5ff);
 }
+
 .toastify.warning {
-    background: linear-gradient(30deg, rgb(235, 166, 18), rgba(235, 166, 18, .8), #73a5ff);
-    color: rgb(30, 30, 30);
+	background: linear-gradient(30deg, rgb(235, 166, 18), rgba(235, 166, 18, .8), #73a5ff);
+	color: rgb(30, 30, 30);
 }
+
 .toastify.danger {
-    background: linear-gradient(30deg, rgb(200, 20, 10), rgba(1200, 20, 10, .8), #73a5ff);
+	background: linear-gradient(30deg, rgb(200, 20, 10), rgba(1200, 20, 10, .8), #73a5ff);
 }
+
+
+/* ==========================================================================================    GLOBALS  */
+
+.card {
+	-webkit-box-shadow: var(--falcon-box-shadow);
+	box-shadow: var(--falcon-box-shadow)
+}
+
+.form-control {display: block;width: 100%;padding: .3125rem 1rem;font-size: 1rem;font-weight: 400;line-height: 1.5;color: var(--falcon-input-color);background-color: var(--falcon-input-bg);background-clip: padding-box;border: 1px solid var(--falcon-input-border-color);-webkit-appearance: none;-moz-appearance: none;appearance: none;border-radius: .25rem;-webkit-box-shadow: var(--falcon-box-shadow-inset);box-shadow: var(--falcon-box-shadow-inset);-webkit-transition: border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;transition: border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;-o-transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out, -webkit-box-shadow .15s ease-in-out}
+
+.btn, [data-list] .page, .tox .tox-menu__footer .tox-button:last-child, .tox .tox-dialog__footer .tox-button:last-child, .tox .tox-menu__footer .tox-button--secondary, .tox .tox-dialog__footer .tox-button--secondary {display: inline-block;font-weight: 500;line-height: 1.5;color: #5e6e82;text-align: center;vertical-align: middle;cursor: pointer;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;background-color: transparent;border: 1px solid transparent;padding: .3125rem 1rem;font-size: 1rem;border-radius: .25rem;-webkit-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, -webkit-box-shadow .15s ease-in-out;-o-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out, -webkit-box-shadow .15s ease-in-out}
+
+.btn-primary, .navbar-vertical .btn-purchase, .tox .tox-menu__footer .tox-button:last-child, .tox .tox-dialog__footer .tox-button:last-child {
+	color: #fff;
+	background-color: #2c7be5;
+	border-color: #2c7be5;
+	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 1px rgba(0, 0, 0, .075);
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 1px rgba(0, 0, 0, .075);
+}
+
+.btn-outline-primary {color: #2c7be5;border-color: #2c7be5}
