--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,13 +28,13 @@
 }
 
 .Account_profile__TM8Wq {
-    background-color: #f5f5f5;
     height: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px 40px
+    padding: 30px 40px;
+
 }
 
 .Account_profile__TM8Wq .Account_settingsIcon__3bWWi {
