--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,22 @@
 	z-index: 2;
 	color: white!important;
 }
+
+
+/**
+####################################    ----------------------------    SWIPER
+*/
+.swiper {
+	height: 27rem;
+}
+
+.swiper img {
+	height: 20rem;
+}
+
+@media (min-width: 1200px) {
+	.main-image img {
+		min-height: 500px;
+		object-fit: cover;
+	}
+}
