--- a/public/css/global.css
+++ b/public/css/global.css
@@ -196,3 +196,25 @@ img {
 }
 
 .btn-outline-primary {color: #2c7be5;border-color: #2c7be5}
+
+.rounded-7 {
+	border-radius: .7rem;
+}
+
+.bg-shape {position: relative;overflow: hidden;background-color: var(--falcon-bg-shape-bg)}
+
+.bg-shape:after, .bg-shape:before {position: absolute;content: '';border-radius: 50%}
+
+.bg-shape:after {background-image: var(--falcon-bg-shape-bg-ltd)}
+
+.bg-shape:before {background-image: var(--falcon-bg-shape-bg-dtl)}
+
+.bg-circle-shape:after {height: 15.625rem;width: 115%;left: 32%;top: -188%}
+
+.bg-circle-shape:before {height: 332%;width: 45%;left: -9%;top: .5625rem}
+
+.z-index-1 {z-index: 1 !important}
+
+.z-index-2 {z-index: 2 !important}
+
+.card-header:first-child {border-radius: calc(0.375rem - 0px) calc(0.375rem - 0px) 0 0}
