Modified Auth Designs

--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -1,5 +1,5 @@
 .Login_backgroundImage__2j-eI {
-	background-image: url(/images/outdoor_voices_new_york_6037.jpeg);
+	background-image: url(/images/flatlogic/pexels-artem-beliaikin-994523.jpg);
 	background-size: cover;
 }
 
