--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,3 +21,14 @@
 		object-fit: cover;
 	}
 }
+
+
+.product-action {
+	border-radius: 50px;
+	background-color: rgba(37, 42, 49, .4);
+	color: white;
+	width: 24px;
+	height: 24px;
+	box-shadow: var(--falcon-box-shadow);
+	backdrop-filter: blur(5px);
+}
